--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -1,27 +1,3 @@
-<!-- 
-  Create tabs with an icon and label, using the tabs-positive style. 
-  Each tab's child <ion-nav-view> directive will have its own 
-  navigation history that also transitions its views in and out.
--->
-<ion-tabs class="tabs-icon-top">
-
-
-  <!-- Dashboard Tab -->
-  <ion-tab title="Dashboard" icon="icon ion-home" href="#/tab/dash">
-    <ion-nav-view name="tab-dash"></ion-nav-view>
-  </ion-tab>
-
-
-  <!-- Friends Tab -->
-  <ion-tab title="Friends" icon="icon ion-heart" href="#/tab/friends">
-    <ion-nav-view name="tab-friends"></ion-nav-view>
-  </ion-tab>
-
-
-  <!-- Account Tab -->
-  <ion-tab title="Account" icon="icon ion-gear-b" href="#/tab/account">
-    <ion-nav-view name="tab-account"></ion-nav-view>
-  </ion-tab>
-
-
-</ion-tabs>
+<!--Create tabs with an icon and label, using the tabs-positive style.
+Each tab's child <ion-nav-view> directive will have its own
+navigation history that also transitions its views in and out.--><ion-tabs tabs-style="tabs-icon-top" tabs-type="tabs-default"><!-- Home Tab--><ion-tab title="Home" icon="icon ion-home" href="#/tab/home"><ion-nav-view name="home-tab"></ion-nav-view></ion-tab><!-- Vendors Tab--><ion-tab title="Vendors" icon="icon ion-star" href="#/tab/vendors"><ion-nav-view name="vendors-tab"></ion-nav-view></ion-tab><!-- About Tab--><ion-tab title="About" icon="icon ion-information-circled" href="#/tab/about"><ion-nav-view name="about-tab"></ion-nav-view></ion-tab></ion-tabs>
