remove some single quoutes

--- a/app/views/about.jade
+++ b/app/views/about.jade
@@ -1,4 +1,4 @@
-ion-view(title='\'About this seed\'')
+ion-view(title='About this seed')
   ion-content(has-header='true', has-tabs='true', padding='true')
     .card
       p
