--- a/app/views/home.jade
+++ b/app/views/home.jade
@@ -1,4 +1,4 @@
-ion-view(title='\'Home\'')
+ion-view(title='Home')
   ion-content(has-header='true', has-tabs='true')
     .card
       .item.item-text-wrap
