--- a/app/views/vendors.jade
+++ b/app/views/vendors.jade
@@ -1,4 +1,4 @@
-ion-view(title='\'Vendors\'')
+ion-view(title='Vendors')
   ion-content(has-header='true', has-tabs='true', padding='true')
     .list(ng-repeat='vendor in vendors')
       a.item.item-thumbnail-left(href='{{vendor.link}}', target='_blank')
