--- a/app/views/home.jade
+++ b/app/views/home.jade
@@ -2,7 +2,7 @@ ion-view(title='Home')
   ion-content(has-header='true', has-tabs='true')
     .card
       .item.item-text-wrap
-        h2 Brunch-ionic-angular-cordova-seed
+        h2 ionic-gulp-seed
     .card
       .item.item-text-wrap
         | This is a template for building mobile apps using like HTML, CSS, and Javascript.
