give some color to headers and footer

--- a/app/views/home.jade
+++ b/app/views/home.jade
@@ -5,15 +5,15 @@ ion-view(title='Home')
         h2 ionic-gulp-seed
     .card
       .item.item-text-wrap
-        | This is a template for building mobile apps using like HTML, CSS, and Javascript.
+        | This is a seed template for building mobile apps using like HTML, CSS, and Javascript.
     .card
       .item.item-text-wrap
-        | It uses
+        | It uses &nbsp;
         a(href='http://phonegap.com/', target='_blank') PhoneGap
-        | for compiling/supporting different devices,
+        |  for compiling/supporting different devices, &nbsp;
         a(href='http://angularjs.org/', target='_blank') AngularJs
-        | for the application framework,
+        |  for the application framework, &nbsp;
         a(href='http://gulpjs.com/', target='_blank') Gulp.js
-        | for work-flow/application and
+        |  for work-flow/application and &nbsp;
         a(href='http://ionicframework.com/', target='_blank') Ionic
-        | a powerful HTML5 native app development framework.
+        |  a powerful HTML5 native app development framework.
