--- a/app/views/tabs.jade
+++ b/app/views/tabs.jade
@@ -2,7 +2,7 @@
   Create tabs with an icon and label, using the tabs-positive style.
   Each tab's child <ion-nav-view> directive will have its own
   navigation history that also transitions its views in and out.
-ion-tabs(tabs-style='tabs-icon-top', tabs-type='tabs-default')
+ion-tabs(tabs-style='tabs-icon-top', tabs-type='tabs-default', class="tabs-icon-top tabs-positive")
   // Home Tab
   ion-tab(title='Home', icon='icon ion-home', href='#/tab/home')
     ion-nav-view(name='home-tab')
